Corrected some janky quotes in the scorecard code, just for completeness sake.

--- a/scorecard/trustymail_scorecard.mustache
+++ b/scorecard/trustymail_scorecard.mustache
@@ -409,7 +409,7 @@ Of the \textbf{<<&overall_live_domain_count>> \href{https://github.com/GSA/data/
 \begin{center}
 {\RCHeadA National Cybersecurity Assessments and Technical Services (NCATS)\\
 <<&scorecard_name>> Trustworthy Email Scorecard\ \textemdash \ \usvardate\formatdate<<&title_date_tex>>\\
-"CFO Act" Agencies}
+``CFO Act" Agencies}
 \end{center}
 
 \vspace*{3mm}
@@ -419,7 +419,7 @@ Of the \textbf{<<&overall_live_domain_count>> \href{https://github.com/GSA/data/
 		\setlength{\parskip}{0pt}
 		{\SCMed\RaggedRight
 		\color{sc-low}
-		\textbf{GOAL: A DMARC policy of "reject" on \\ ALL of their .gov domains}\\
+		\textbf{GOAL: A DMARC policy of ``reject" on \\ ALL of their .gov domains}\\
 		\rule{0.9\columnwidth}{0.4mm}
 		\begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\cmark}]
 		<<#cfo_orgs_dmarc_reject_all>>
@@ -433,7 +433,7 @@ Of the \textbf{<<&overall_live_domain_count>> \href{https://github.com/GSA/data/
 
 		{\SCMed\RaggedRight
 		\color{sc-medium}
-		\textbf{DMARC policy of "reject" on \\ SOME of their .gov domains}\\
+		\textbf{DMARC policy of ``reject" on \\ SOME of their .gov domains}\\
 		\rule{0.9\columnwidth}{0.4mm}
 		\begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\cmark}]
 		<<#cfo_orgs_dmarc_reject_some>>
@@ -447,7 +447,7 @@ Of the \textbf{<<&overall_live_domain_count>> \href{https://github.com/GSA/data/
 
     {\SCMed\RaggedRight
     \color{sc-high}
-    \textbf{NO DMARC policy of "reject" on \\ ANY of their .gov domains}\\
+    \textbf{NO DMARC policy of ``reject" on \\ ANY of their .gov domains}\\
     \rule{0.9\columnwidth}{0.4mm}
     \begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\xmark}]
     <<#cfo_orgs_dmarc_reject_none>>
@@ -479,7 +479,7 @@ All Agencies}
 		\setlength{\parskip}{0pt}
 		{\SCSmall\RaggedRight
 		\color{sc-low}
-		\textbf{GOAL: A DMARC policy of "reject" \\ on ALL of their .gov domains}\\
+		\textbf{GOAL: A DMARC policy of ``reject" \\ on ALL of their .gov domains}\\
 		\rule{0.9\columnwidth}{0.4mm}
 		\begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\cmark}]
 		<<#all_orgs_dmarc_reject_all>>
@@ -492,7 +492,7 @@ All Agencies}
 		\vspace*{4mm}
 		{\SCSmall\RaggedRight
 		\color{sc-medium}
-		\textbf{DMARC policy of "reject" \\ on SOME of their .gov domains}\\
+		\textbf{DMARC policy of ``reject" \\ on SOME of their .gov domains}\\
 		\rule{0.9\columnwidth}{0.4mm}
 		\begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\cmark}]
 		<<#all_orgs_dmarc_reject_some>>
@@ -505,7 +505,7 @@ All Agencies}
 		\vspace*{4mm}
 		{\SCSmall\RaggedRight
 		\color{sc-high}
-		\textbf{NO DMARC policy of "reject" \\ on ANY of their .gov domains}\\
+		\textbf{NO DMARC policy of ``reject" \\ on ANY of their .gov domains}\\
 		\rule{0.9\columnwidth}{0.4mm}
 		\begin{itemize}[leftmargin=4mm, itemindent=3mm, labelsep=4mm, noitemsep, label=\textbf{\xmark}]
 		<<#all_orgs_dmarc_reject_none>>
