Adding a page break before the section explaining the DMARC failures column in the table

--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -543,6 +543,7 @@ Whether a hostname meets all of the following criteria for being compliant with 
     \item SSLv2, SSLv3 and 3DES, RC4 ciphers are not supported on all SMTP servers (or has no SMTP servers)
   \end{itemize}
 
+\newpage
 \vspace*{-5mm}
 \phantomsection % links this section from toc
 \addcontentsline{toc}{subsubsection}{DMARC Failures (Past Week)} % Adds a subsection to toc
