--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -553,11 +553,11 @@ Whether a hostname meets all of the following criteria for being compliant with 
 
 The number of DMARC failures reported in the past seven days, as
 determined by the
-\href{https://tools.ietf.org/html/rfc7489#section-7.2}{DMARC aggregate
-reports} received at \texttt{reports@dmarc.cyber.dhs.gov}.  This field
-is only applicable to base domains, so its value is ``N/A'' for all
-subdomains.  See dmarc\_failures.csv in the Attachments section for
-details.
+\href{https://cyber.dhs.gov/bod/18-01/#what-are-dmarc-reports}{DMARC
+aggregate reports} received at \texttt{reports@dmarc.cyber.dhs.gov}.
+This field is only applicable to base domains, so its value is ``N/A''
+for all subdomains.  See dmarc\_failures.csv in the Attachments
+section for details.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -648,12 +648,12 @@ The measurements in this report are derived from \texttt{trustymail}, our \href{
 \end{itemize}
 
 Data in this report related to DMARC failures is gathered from the
-\href{https://tools.ietf.org/html/rfc7489#section-7.2}{DMARC aggregate
+\href{https://cyber.dhs.gov/bod/18-01/#what-are-dmarc-reports}{DMARC aggregate
   reports} received at \texttt{reports@dmarc.cyber.dhs.gov}.  Note
 that DMARC failures can occur for the following reasons:
 \begin{itemize}[topsep=-6pt, itemsep=0pt]
-\item \href{https://en.wikipedia.org/wiki/Sender_Policy_Framework}{SPF failure}
-\item \href{https://en.wikipedia.org/wiki/DomainKeys_Identified_Mail}{DKIM failure}
+\item \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{SPF failure}
+\item \href{https://cyber.dhs.gov/bod/18-01/#dmarc}{DKIM failure}
 \item \href{https://tools.ietf.org/html/rfc7489#section-3.1}{DMARC failure} (\href{https://tools.ietf.org/html/rfc7489#appendix-B.1}{identifier alignment failure})
 \end{itemize}
 
@@ -669,7 +669,7 @@ If your PDF viewer supports embedded attachments, you will see a paperclip icon 
 \attachfile[appearance=false,mimetype=text/csv,icon=Paperclip,ucfilespec=trustymail\_results.csv]{trustymail_results.csv} trustymail\_results.csv : Detailed results from \texttt{trustymail} scan {\small\lbrack\href{https://github.com/dhs-ncats/trustymail}{https://github.com/dhs-ncats/trustymail}]}\\~\\
 \attachfile[appearance=false,mimetype=text/csv,icon=Paperclip,ucfilespec=dmarc\_failures.csv]{dmarc_failures.csv}
 dmarc\_failures.csv : Detailed results gathered from
-\href{https://tools.ietf.org/html/rfc7489#section-7.2}{DMARC aggregate
+\href{https://cyber.dhs.gov/bod/18-01/#what-are-dmarc-reports}{DMARC aggregate
 reports} received at \texttt{reports@dmarc.cyber.dhs.gov} during the
 past week.\\~\\
 
