Correcting DKIM failure hyperlink

--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -658,7 +658,7 @@ failure data.
 Note that DMARC failures can occur for the following reasons:
 \begin{itemize}[topsep=-6pt, itemsep=0pt]
 \item \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{SPF failure}
-\item \href{https://cyber.dhs.gov/bod/18-01/#dmarc}{DKIM failure}
+\item \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{DKIM failure}
 \item \href{https://tools.ietf.org/html/rfc7489#section-3.1}{DMARC failure} (\href{https://tools.ietf.org/html/rfc7489#appendix-B.1}{identifier alignment failure})
 \end{itemize}
 
